# aletheia-ai

./: .env.example  .gitignore  KINDERGARDEN.md  LASTEAED.md  LICENSE  README.md  docker-compose.yml
.github/issue-bodies/: 1-demo-policy.md  10-outreach.md  11-analytics.md  2-policy-coverage-backend.md  3-policy-coverage-aep.md  4-ui-policy-coverage.md  5-ui-why-not-100.md  6-landing-hero-cta.md  7-scenario-hr-legal.md  8-demo-video.md  9-use-cases-page.md  phase5-1-public-api-openapi.md  phase5-2-sign-only-api.md  phase5-3-python-sdk.md  phase5-4-typescript-sdk.md  phase5-5-mcp-attestation.md  phase5-6-siem-integration.md  phase5-7-blockchain-anchoring.md  phase5-8-partner-scenarios.md
.github/workflows/: backend.yml  codeql-analysis.yml  codeql.yml  deploy.yml  (+1 more)
backend/: .dockerignore  .gitignore  Dockerfile  pom.xml
diagrams/: architecture.md
docs/: DEMO_SCENARIO_PHASE4.md  DEMO_SCRIPT.md  DOCS_STRUCTURE.md  MANUAL_TEST_CHECKLIST_4_2.md  PHASE4_ANALYTICS.md  PoC.ru.md  README.md  SIGNING.et.md  SIGNING.md  SIGNING.ru.md  TIMESTAMPING.et.md  TIMESTAMPING.md  TIMESTAMPING.ru.md  TRANSLATION_TODO.md  TRUST_MODEL.et.md  TRUST_MODEL.md  TRUST_MODEL.ru.md  plan.en.md  plan.et.md  plan.ru.md
frontend/: .dockerignore  .env.example  Dockerfile  README.md  jest.config.mjs  next.config.mjs  next.config.ts  package-lock.json  package.json
scripts/: README.md  aletheia-evidence.aep  verify-evidence-java.sh  verify-evidence.sh
sdk/: README.md
sdk/python/: README.md  pyproject.toml
sdk/python/aletheia/: __init__.py  client.py
sdk/python/tests/: test_client.py
(+256 files in other folders)
